--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["consts", "proto", "protobuf", "Vahid"]
+  "cSpell.words": ["consts", "proto", "protobuf", "Vahid", "vakili"]
 }
